Fixes card's z-index

--- a/assets/index.css
+++ b/assets/index.css
@@ -95,6 +95,7 @@ main {
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
     overflow: hidden;
+    z-index: 2 !important;
 }
     .imageContainer {
         border-top-left-radius: 10px;
